--- a/tutorial/html/integrated_learners/index.html
+++ b/tutorial/html/integrated_learners/index.html
@@ -281,94 +281,6 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left"><strong>classif.IBk</strong> <br />ibk</td>
-<td align="left">k-Nearest Neighbours</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
-<td align="center">X</td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="right">multiclass<br />prob<br />twoclass</td>
-<td align="left"></td>
-</tr>
-<tr>
-<td align="left"><strong>classif.J48</strong> <br />j48</td>
-<td align="left">J48 Decision Trees</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
-<td align="center">X</td>
-<td align="center">X</td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="right">multiclass<br />prob<br />twoclass</td>
-<td align="left">NAs are directly passed to WEKA with <code>na.action = na.pass</code></td>
-</tr>
-<tr>
-<td align="left"><strong>classif.JRip</strong> <br />jrip</td>
-<td align="left">Propositional Rule Learner</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
-<td align="center">X</td>
-<td align="center">X</td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="right">multiclass<br />prob<br />twoclass</td>
-<td align="left">NAs are directly passed to WEKA with <code>na.action = na.pass</code></td>
-</tr>
-<tr>
-<td align="left"><strong>classif.LiblineaRBinary</strong> <br />liblinearbinary</td>
-<td align="left">Regularized Binary Linear Predictive Models Estimation</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/LiblineaR/">LiblineaR</a></td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="right">twoclass</td>
-<td align="left">This model subsumes the types 1,2,3,5.</td>
-</tr>
-<tr>
-<td align="left"><strong>classif.LiblineaRLogReg</strong> <br />reglreg</td>
-<td align="left">Regularized Logistic Regression</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/LiblineaR/">LiblineaR</a></td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="right">prob<br />twoclass</td>
-<td align="left">This model subsumes type 0,6,7.</td>
-</tr>
-<tr>
-<td align="left"><strong>classif.LiblineaRMultiClass</strong> <br />mcsvc</td>
-<td align="left">Multi-class Support Vector Classification by Crammer and Singer</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/LiblineaR/">LiblineaR</a></td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="right">multiclass<br />twoclass</td>
-<td align="left">This model is type 4.</td>
-</tr>
-<tr>
-<td align="left"><strong>classif.OneR</strong> <br />oner</td>
-<td align="left">1-R Classifier</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
-<td align="center">X</td>
-<td align="center">X</td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="right">multiclass<br />prob<br />twoclass</td>
-<td align="left">NAs are directly passed to WEKA with <code>na.action = na.pass</code></td>
-</tr>
-<tr>
-<td align="left"><strong>classif.PART</strong> <br />part</td>
-<td align="left">PART Decision Lists</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
-<td align="center">X</td>
-<td align="center">X</td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="right">multiclass<br />prob<br />twoclass</td>
-<td align="left">NAs are directly passed to WEKA with <code>na.action = na.pass</code></td>
-</tr>
-<tr>
 <td align="left"><strong>classif.ada</strong> <br />ada</td>
 <td align="left">ada Boosting</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/ada/">ada</a></td>
@@ -490,6 +402,39 @@ vertical-align: top;
 <td align="left"></td>
 </tr>
 <tr>
+<td align="left"><strong>classif.IBk</strong> <br />ibk</td>
+<td align="left">k-Nearest Neighbours</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="right">multiclass<br />prob<br />twoclass</td>
+<td align="left"></td>
+</tr>
+<tr>
+<td align="left"><strong>classif.J48</strong> <br />j48</td>
+<td align="left">J48 Decision Trees</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="right">multiclass<br />prob<br />twoclass</td>
+<td align="left">NAs are directly passed to WEKA with <code>na.action = na.pass</code></td>
+</tr>
+<tr>
+<td align="left"><strong>classif.JRip</strong> <br />jrip</td>
+<td align="left">Propositional Rule Learner</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="right">multiclass<br />prob<br />twoclass</td>
+<td align="left">NAs are directly passed to WEKA with <code>na.action = na.pass</code></td>
+</tr>
+<tr>
 <td align="left"><strong>classif.kknn</strong> <br />kknn</td>
 <td align="left">k-Nearest Neighbor</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/kknn/">kknn</a></td>
@@ -532,6 +477,39 @@ vertical-align: top;
 <td align="center"></td>
 <td align="right">multiclass<br />prob<br />twoclass</td>
 <td align="left"></td>
+</tr>
+<tr>
+<td align="left"><strong>classif.LiblineaRBinary</strong> <br />liblinearbinary</td>
+<td align="left">Regularized Binary Linear Predictive Models Estimation</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/LiblineaR/">LiblineaR</a></td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="right">twoclass</td>
+<td align="left">This model subsumes the types 1,2,3,5.</td>
+</tr>
+<tr>
+<td align="left"><strong>classif.LiblineaRLogReg</strong> <br />reglreg</td>
+<td align="left">Regularized Logistic Regression</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/LiblineaR/">LiblineaR</a></td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="right">prob<br />twoclass</td>
+<td align="left">This model subsumes type 0,6,7.</td>
+</tr>
+<tr>
+<td align="left"><strong>classif.LiblineaRMultiClass</strong> <br />mcsvc</td>
+<td align="left">Multi-class Support Vector Classification by Crammer and Singer</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/LiblineaR/">LiblineaR</a></td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="right">multiclass<br />twoclass</td>
+<td align="left">This model is type 4.</td>
 </tr>
 <tr>
 <td align="left"><strong>classif.linDA</strong> <br />linda</td>
@@ -631,6 +609,28 @@ vertical-align: top;
 <td align="center">X</td>
 <td align="right">multiclass<br />prob<br />twoclass</td>
 <td align="left"><code>size</code> has been set to 3 by default.</td>
+</tr>
+<tr>
+<td align="left"><strong>classif.OneR</strong> <br />oner</td>
+<td align="left">1-R Classifier</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="right">multiclass<br />prob<br />twoclass</td>
+<td align="left">NAs are directly passed to WEKA with <code>na.action = na.pass</code></td>
+</tr>
+<tr>
+<td align="left"><strong>classif.PART</strong> <br />part</td>
+<td align="left">PART Decision Lists</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="right">multiclass<br />prob<br />twoclass</td>
+<td align="left">NAs are directly passed to WEKA with <code>na.action = na.pass</code></td>
 </tr>
 <tr>
 <td align="left"><strong>classif.plr</strong> <br />plr</td>
@@ -783,17 +783,6 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left"><strong>regr.IBk</strong> <br />ibk</td>
-<td align="left">K-Nearest Neighbours</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
-<td align="center">X</td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="right"></td>
-<td align="left"></td>
-</tr>
-<tr>
 <td align="left"><strong>regr.blackboost</strong> <br />blackbst</td>
 <td align="left">Gradient Boosting with Regression Trees</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/mboost/">mboost</a><br /><a href="http://www.rdocumentation.org/packages/party/">party</a></td>
@@ -882,6 +871,17 @@ vertical-align: top;
 <td align="left"></td>
 </tr>
 <tr>
+<td align="left"><strong>regr.IBk</strong> <br />ibk</td>
+<td align="left">K-Nearest Neighbours</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="right"></td>
+<td align="left"></td>
+</tr>
+<tr>
 <td align="left"><strong>regr.kknn</strong> <br />kknn</td>
 <td align="left">K-Nearest-Neighbor regression</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/kknn/">kknn</a></td>
@@ -938,7 +938,7 @@ vertical-align: top;
 </tr>
 <tr>
 <td align="left"><strong>regr.mob</strong> <br />mob</td>
-<td align="left">Model-based Recursive Partitioning  Yielding a Tree with Fitted Models Associated with each Terminal Node</td>
+<td align="left">Model-based Recursive Partitioning Yielding a Tree with Fitted Models Associated with each Terminal Node</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/party/">party</a></td>
 <td align="center">X</td>
 <td align="center">X</td>
@@ -1055,7 +1055,7 @@ vertical-align: top;
 <td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
-<td align="left">Kernel parameters have to be passed directly and not by using the kpar list in rvm.   Note that <code>fit</code> has been set to <code>FALSE</code> by default for speed.</td>
+<td align="left">Kernel parameters have to be passed directly and not by using the kpar list in rvm.  Note that <code>fit</code> has been set to <code>FALSE</code> by default for speed.</td>
 </tr>
 <tr>
 <td align="left"><strong>regr.svm</strong> <br />svm</td>
@@ -1087,17 +1087,6 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left"><strong>surv.CoxBoost</strong> <br />coxboost</td>
-<td align="left">Cox Proportional Hazards Model with Componentwise Likelihood based Boosting</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/CoxBoost/">CoxBoost</a></td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="center">X</td>
-<td align="right">rcens</td>
-<td align="left"></td>
-</tr>
-<tr>
 <td align="left"><strong>surv.cforest</strong> <br />crf</td>
 <td align="left">Random Forest based on Conditional Inference Trees</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/party/">party</a><br /><a href="http://www.rdocumentation.org/packages/survival/">survival</a></td>
@@ -1106,6 +1095,17 @@ vertical-align: top;
 <td align="center"></td>
 <td align="center">X</td>
 <td align="right">ordered<br />rcens</td>
+<td align="left"></td>
+</tr>
+<tr>
+<td align="left"><strong>surv.CoxBoost</strong> <br />coxboost</td>
+<td align="left">Cox Proportional Hazards Model with Componentwise Likelihood based Boosting</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/CoxBoost/">CoxBoost</a></td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center">X</td>
+<td align="right">rcens</td>
 <td align="left"></td>
 </tr>
 <tr>
@@ -1145,6 +1145,17 @@ vertical-align: top;
 <td align="left"><strong>surv.glmnet</strong> <br />glmnet</td>
 <td align="left">GLM with Regularization</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/glmnet/">glmnet</a></td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center">X</td>
+<td align="right">rcens</td>
+<td align="left"></td>
+</tr>
+<tr>
+<td align="left"><strong>surv.optimCoxBoostPenalty</strong> <br />coxboost</td>
+<td align="left">Cox Proportional Hazards Model with Componentwise Likelihood based Boosting</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/CoxBoost/">CoxBoost</a></td>
 <td align="center">X</td>
 <td align="center"></td>
 <td align="center"></td>
@@ -1193,6 +1204,17 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
+<td align="left"><strong>cluster.cmeans</strong> <br />cmeans</td>
+<td align="left">Fuzzy C-Means Clustering</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/e1071/">e1071</a><br /><a href="http://www.rdocumentation.org/packages/clue/">clue</a></td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="right">prob</td>
+<td align="left">The 'predict' method uses 'cl_predict' from the 'clue' package to compute the cluster memberships for new data. The default 'centers=2' is added so the method runs without setting params, but this must in reality of course be changed by the user.</td>
+</tr>
+<tr>
 <td align="left"><strong>cluster.DBScan</strong> <br />dbscan</td>
 <td align="left">DBScan Clustering</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
@@ -1226,6 +1248,17 @@ vertical-align: top;
 <td align="left"></td>
 </tr>
 <tr>
+<td align="left"><strong>cluster.kmeans</strong> <br />kmeans</td>
+<td align="left">K-Means</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/stats/">stats</a><br /><a href="http://www.rdocumentation.org/packages/clue/">clue</a></td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="right"></td>
+<td align="left">The 'predict' method uses 'cl_predict' from the 'clue' package to compute the cluster memberships for new data. The default 'centers=2' is added so the method runs without setting params, but this must in reality of course be changed by the user.</td>
+</tr>
+<tr>
 <td align="left"><strong>cluster.SimpleKMeans</strong> <br />simplekmeans</td>
 <td align="left">K-Means Clustering</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
@@ -1246,28 +1279,6 @@ vertical-align: top;
 <td align="center"></td>
 <td align="right"></td>
 <td align="left">You may have to install the XMeans Weka package: WPM('install-package', 'XMeans').</td>
-</tr>
-<tr>
-<td align="left"><strong>cluster.cmeans</strong> <br />cmeans</td>
-<td align="left">Fuzzy C-Means Clustering</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/e1071/">e1071</a><br /><a href="http://www.rdocumentation.org/packages/clue/">clue</a></td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="right">prob</td>
-<td align="left">The 'predict' method uses 'cl_predict' from the 'clue' package to compute the cluster memberships for new data. The default 'centers=2' is added so the method runs without setting params, but this must in reality of course be changed by the user.</td>
-</tr>
-<tr>
-<td align="left"><strong>cluster.kmeans</strong> <br />kmeans</td>
-<td align="left">K-Means</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/stats/">stats</a><br /><a href="http://www.rdocumentation.org/packages/clue/">clue</a></td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="right"></td>
-<td align="left">The 'predict' method uses 'cl_predict' from the 'clue' package to compute the cluster memberships for new data. The default 'centers=2' is added so the method runs without setting params, but this must in reality of course be changed by the user.</td>
 </tr>
 </tbody>
 </table>
