--- a/tutorial/html/measures/index.html
+++ b/tutorial/html/measures/index.html
@@ -288,7 +288,7 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">acc</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">acc</a> - Accuracy</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -300,7 +300,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">auc</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">auc</a> - Area under the curve</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -312,7 +312,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">bac</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">bac</a> - Balanced accuracy. Mean of true positive rate and true negative rate</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -324,7 +324,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">ber</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">ber</a> - Balanced error rate. Mean of misclassification error rates on all individual classes.</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">1</td>
@@ -336,7 +336,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">f1</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">f1</a> - F1 measure</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -348,7 +348,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fdr</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fdr</a> - False discovery rate</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">1</td>
@@ -360,7 +360,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fn</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fn</a> - False negatives, also called misses.</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -372,7 +372,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fnr</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fnr</a> - False negative rate</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">1</td>
@@ -384,7 +384,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fp</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fp</a> - False positives, also called false alarms.</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -396,7 +396,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fpr</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">fpr</a> - False positive rate, also called false alarm rate or fall-out.</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">1</td>
@@ -408,7 +408,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">gmean</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">gmean</a> - G-mean, geometric mean of recall and specificity.</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -420,7 +420,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">gpr</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">gpr</a> - Geometric mean of precision and recall</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -432,7 +432,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mcc</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mcc</a> - Matthews correlation coefficient</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">-1</td>
@@ -444,7 +444,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mmce</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mmce</a> - Mean misclassification error</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">1</td>
@@ -456,7 +456,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">multiclass.auc</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">multiclass.auc</a> - Area under the curve for multiclass problems. Calls <code>pROC::multiclass.roc</code>.</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -468,7 +468,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">npv</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">npv</a> - Negative predictive value</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -480,7 +480,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">ppv</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">ppv</a> - Positive predictive value, also called precision.</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -492,7 +492,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">tn</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">tn</a> - rue negatives, also called correct rejections.</td>
 <td align="center"></td>
 <td align="right">Inf</td>
 <td align="right">0</td>
@@ -504,7 +504,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">tnr</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">tnr</a> - True negative rate. Also called specificity.</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -516,7 +516,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">tp</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">tp</a> - True positives</td>
 <td align="center"></td>
 <td align="right">Inf</td>
 <td align="right">0</td>
@@ -528,7 +528,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">tpr</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">tpr</a> - True positive rate, also called hit rate or recall.</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -558,7 +558,7 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mae</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mae</a> - Mean of absolute errors</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -569,7 +569,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">medae</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">medae</a> - Median of absolute errors</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -580,7 +580,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">medse</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">medse</a> - Median of squared errors</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -591,7 +591,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mse</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mse</a> - Mean of squared errors</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -602,7 +602,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">rmse</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">rmse</a> - Root mean square error</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -613,7 +613,7 @@ vertical-align: top;
 <td align="left">test.sqrt.of.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">sae</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">sae</a> - Sum of absolute errors</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -624,7 +624,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">sse</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">sse</a> - Sum of squared errors</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -653,7 +653,7 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">cindex</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">cindex</a> - Concordance index</td>
 <td align="center"></td>
 <td align="right">1</td>
 <td align="right">0</td>
@@ -682,29 +682,7 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">G1</a></td>
-<td align="center"></td>
-<td align="right">Inf</td>
-<td align="right">0</td>
-<td align="left">response<br />prob</td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="left">test.mean</td>
-</tr>
-<tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">G2</a></td>
-<td align="center"></td>
-<td align="right">Inf</td>
-<td align="right">0</td>
-<td align="left">response<br />prob</td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="left">test.mean</td>
-</tr>
-<tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">db</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">db</a> - Davies-Bouldin cluster separation measure, see <code>?clusterSim::index.DB</code></td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -715,7 +693,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">dunn</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">dunn</a> - Dunn index, see <code>?clValid::dunn</code></td>
 <td align="center"></td>
 <td align="right">Inf</td>
 <td align="right">0</td>
@@ -726,7 +704,29 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">silhouette</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">G1</a> - Calinski-Harabasz pseudo F statistic, see <code>?clusterSim::index.G1</code></td>
+<td align="center"></td>
+<td align="right">Inf</td>
+<td align="right">0</td>
+<td align="left">response<br />prob</td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="left">test.mean</td>
+</tr>
+<tr>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">G2</a> - Baker and Hubert adaptation of Goodman-Kruskal's gamma statistic, see <code>?clusterSim::index.G2</code></td>
+<td align="center"></td>
+<td align="right">Inf</td>
+<td align="right">0</td>
+<td align="left">response<br />prob</td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center"></td>
+<td align="left">test.mean</td>
+</tr>
+<tr>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">silhouette</a> - Rousseeuw's silhouette internal cluster quality index, see <code>?clusterSim::index.S</code></td>
 <td align="center"></td>
 <td align="right">Inf</td>
 <td align="right">0</td>
@@ -755,7 +755,7 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mcp</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">mcp</a> - Misclassification penalty, i.e. average difference between costs of oracle and model prediction.</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -766,7 +766,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">meancosts</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">meancosts</a> - Mean costs of the predicted choices.</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -795,7 +795,7 @@ vertical-align: top;
 </thead>
 <tbody>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">featperc</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">featperc</a> - Percentage of original features used for model, useful for feature selection.</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">1</td>
@@ -806,7 +806,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">timeboth</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">timeboth</a> - timetrain + trainpredict</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -817,7 +817,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">timepredict</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">timepredict</a> - Time of predicting test set</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
@@ -828,7 +828,7 @@ vertical-align: top;
 <td align="left">test.mean</td>
 </tr>
 <tr>
-<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">timetrain</a></td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/mlr/functions/measures">timetrain</a> - Time of fitting the model</td>
 <td align="center">X</td>
 <td align="right">0</td>
 <td align="right">Inf</td>
